# prustio

./: .gitignore  Cargo.toml  README.md  cli.py  dependencies.py  main.py  pyproject.toml
project/: cli.py
project/commands/: init_cmd.py
templates/: main_rust_template.py
